button bold currention added

--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@
     background-color: #ff5959;
     color: white;
     font-size: 25px;
-    font-weight: 500px;
+    font-weight: 500;
     padding: 22px 40px;
     text-decoration: none;
     border-radius: 5px;
