--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 .banner-container{
     width: 100%;
     height: 98vh;
-    background-image: url("./images/image2.jpg");
+    background: linear-gradient(rgba(90, 89, 89, 0.199) , rgba(12, 11, 11, 0.842)),url("./images//donation13.jpg");
     background-repeat: no-repeat;
     background-size: cover; 
 }
